# This file was was an automated port of libbulletc-Windows using a modified vcxproj2cmake script and was manually cleaned up.

cmake_minimum_required(VERSION 2.8)

# To run a 32-bit build run cmake like cmake -D32BIT=ON ../
option(32BIT "32BIT" OFF)

## start setting
SET (this_target bulletc)
PROJECT(${this_target})


add_definitions(-DUNICODE -D_UNICODE)


## section: include directory
INCLUDE_DIRECTORIES(
	../../src/src/
	../../src/Extras/Serialize/BulletWorldImporter/
	../../src/Extras/Serialize/BulletXmlWorldImporter/
	../../src/libbulletc/
	../../src/Extras/HACD/
  )

## section: source files
# Add your source files here (one file per line), please SORT in alphabetical order for future maintenance
SET (${this_target}_SOURCE_FILES
    ../../src/Extras/ConvexDecomposition/bestfit.cpp
	../../src/Extras/ConvexDecomposition/bestfitobb.cpp
	../../src/Extras/ConvexDecomposition/cd_hull.cpp
	../../src/Extras/ConvexDecomposition/cd_wavefront.cpp
	../../src/Extras/ConvexDecomposition/concavity.cpp
	../../src/Extras/ConvexDecomposition/ConvexBuilder.cpp
	../../src/Extras/ConvexDecomposition/ConvexDecomposition.cpp
	../../src/Extras/ConvexDecomposition/fitsphere.cpp
	../../src/Extras/ConvexDecomposition/float_math.cpp
	../../src/Extras/ConvexDecomposition/meshvolume.cpp
	../../src/Extras/ConvexDecomposition/planetri.cpp
	../../src/Extras/ConvexDecomposition/raytri.cpp
	../../src/Extras/ConvexDecomposition/splitplane.cpp
	../../src/Extras/ConvexDecomposition/vlookup.cpp
	../../src/Extras/HACD/hacdGraph.cpp
	../../src/Extras/HACD/hacdHACD.cpp
	../../src/Extras/HACD/hacdICHull.cpp
	../../src/Extras/HACD/hacdManifoldMesh.cpp
	../../src/Extras/Serialize/BulletFileLoader/bChunk.cpp
	../../src/Extras/Serialize/BulletFileLoader/bDNA.cpp
	../../src/Extras/Serialize/BulletFileLoader/bFile.cpp
	../../src/Extras/Serialize/BulletFileLoader/btBulletFile.cpp
	../../src/Extras/Serialize/BulletWorldImporter/btBulletWorldImporter.cpp
	../../src/Extras/Serialize/BulletWorldImporter/btWorldImporter.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/btBulletXmlWorldImporter.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/string_split.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinystr.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinyxml.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinyxmlerror.cpp
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinyxmlparser.cpp
	../../src/libbulletc/btActionInterface_wrap.cpp
	../../src/libbulletc/btAlignedObjectArray_wrap.cpp
	../../src/libbulletc/btAxisSweep3_wrap.cpp
	../../src/libbulletc/btBox2dBox2dCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btBox2dShape_wrap.cpp
	../../src/libbulletc/btBoxBoxCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btBoxBoxDetector_wrap.cpp
	../../src/libbulletc/btBoxCollision_wrap.cpp
	../../src/libbulletc/btBoxShape_wrap.cpp
	../../src/libbulletc/btBroadphaseInterface_wrap.cpp
	../../src/libbulletc/btBroadphaseProxy_wrap.cpp
	../../src/libbulletc/btBulletFile_wrap.cpp
	../../src/libbulletc/btBulletWorldImporter_wrap.cpp
	../../src/libbulletc/btBulletXmlWorldImporter_wrap.cpp
	../../src/libbulletc/btBvhTriangleMeshShape_wrap.cpp
	../../src/libbulletc/btCapsuleShape_wrap.cpp
	../../src/libbulletc/btCharacterControllerInterface_wrap.cpp
	../../src/libbulletc/btCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btCollisionConfiguration_wrap.cpp
	../../src/libbulletc/btCollisionCreateFunc_wrap.cpp
	../../src/libbulletc/btCollisionDispatcher_wrap.cpp
	../../src/libbulletc/btCollisionObjectWrapper_wrap.cpp
	../../src/libbulletc/btCollisionObject_wrap.cpp
	../../src/libbulletc/btCollisionShape_wrap.cpp
	../../src/libbulletc/btCollisionWorld_wrap.cpp
	../../src/libbulletc/btCompoundCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btCompoundCompoundCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btCompoundFromGimpact_wrap.cpp
	../../src/libbulletc/btCompoundShape_wrap.cpp
	../../src/libbulletc/btConcaveShape_wrap.cpp
	../../src/libbulletc/btConeShape_wrap.cpp
	../../src/libbulletc/btConeTwistConstraint_wrap.cpp
	../../src/libbulletc/btConstraintSolver_wrap.cpp
	../../src/libbulletc/btContactConstraint_wrap.cpp
	../../src/libbulletc/btContactSolverInfo_wrap.cpp
	../../src/libbulletc/btContinuousConvexCollision_wrap.cpp
	../../src/libbulletc/btConvex2dConvex2dAlgorithm_wrap.cpp
	../../src/libbulletc/btConvex2dShape_wrap.cpp
	../../src/libbulletc/btConvexCast_wrap.cpp
	../../src/libbulletc/btConvexConcaveCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btConvexConvexAlgorithm_wrap.cpp
	../../src/libbulletc/btConvexHullShape_wrap.cpp
	../../src/libbulletc/btConvexInternalShape_wrap.cpp
	../../src/libbulletc/btConvexPenetrationDepthSolver_wrap.cpp
	../../src/libbulletc/btConvexPlaneCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btConvexPointCloudShape_wrap.cpp
	../../src/libbulletc/btConvexPolyhedron_wrap.cpp
	../../src/libbulletc/btConvexShape_wrap.cpp
	../../src/libbulletc/btConvexTriangleMeshShape_wrap.cpp
	../../src/libbulletc/btCylinderShape_wrap.cpp
	../../src/libbulletc/btDantzigSolver_wrap.cpp
	../../src/libbulletc/btDbvtBroadphase_wrap.cpp
	../../src/libbulletc/btDbvt_wrap.cpp
	../../src/libbulletc/btDefaultCollisionConfiguration_wrap.cpp
	../../src/libbulletc/btDefaultMotionState_wrap.cpp
	../../src/libbulletc/btDefaultSoftBodySolver_wrap.cpp
	../../src/libbulletc/btDiscreteCollisionDetectorInterface_wrap.cpp
	../../src/libbulletc/btDiscreteDynamicsWorld_wrap.cpp
	../../src/libbulletc/btDispatcher_wrap.cpp
	../../src/libbulletc/btDynamicsWorld_wrap.cpp
	../../src/libbulletc/btEmptyCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btEmptyShape_wrap.cpp
	../../src/libbulletc/btFixedConstraint_wrap.cpp
	../../src/libbulletc/btGearConstraint_wrap.cpp
	../../src/libbulletc/btGeneric6DofConstraint_wrap.cpp
	../../src/libbulletc/btGeneric6DofSpring2Constraint_wrap.cpp
	../../src/libbulletc/btGeneric6DofSpringConstraint_wrap.cpp
	../../src/libbulletc/btGeometryUtil_wrap.cpp
	../../src/libbulletc/btGhostObject_wrap.cpp
	../../src/libbulletc/btGImpactBvh_wrap.cpp
	../../src/libbulletc/btGImpactCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btGImpactQuantizedBvh_wrap.cpp
	../../src/libbulletc/btGImpactShape_wrap.cpp
	../../src/libbulletc/btGjkConvexCast_wrap.cpp
	../../src/libbulletc/btGjkEpaPenetrationDepthSolver_wrap.cpp
	../../src/libbulletc/btGjkPairDetector_wrap.cpp
	../../src/libbulletc/btHeightfieldTerrainShape_wrap.cpp
	../../src/libbulletc/btHinge2Constraint_wrap.cpp
	../../src/libbulletc/btHingeConstraint_wrap.cpp
	../../src/libbulletc/btIDebugDraw_wrap.cpp
	../../src/libbulletc/btKinematicCharacterController_wrap.cpp
	../../src/libbulletc/btLemkeSolver_wrap.cpp
	../../src/libbulletc/btManifoldPoint_wrap.cpp
	../../src/libbulletc/btManifoldResult_wrap.cpp
	../../src/libbulletc/btMinkowskiPenetrationDepthSolver_wrap.cpp
	../../src/libbulletc/btMinkowskiSumShape_wrap.cpp
	../../src/libbulletc/btMLCPSolverInterface_wrap.cpp
	../../src/libbulletc/btMLCPSolver_wrap.cpp
	../../src/libbulletc/btMotionState_wrap.cpp
	../../src/libbulletc/btMultiBodyConstraintSolver_wrap.cpp
	../../src/libbulletc/btMultiBodyConstraint_wrap.cpp
	../../src/libbulletc/btMultiBodyDynamicsWorld_wrap.cpp
	../../src/libbulletc/btMultiBodyJointLimitConstraint_wrap.cpp
	../../src/libbulletc/btMultiBodyJointMotor_wrap.cpp
	../../src/libbulletc/btMultiBodyLinkCollider_wrap.cpp
	../../src/libbulletc/btMultiBodyLink_wrap.cpp
	../../src/libbulletc/btMultiBodyPoint2Point_wrap.cpp
	../../src/libbulletc/btMultiBodySolverConstraint_wrap.cpp
	../../src/libbulletc/btMultiBody_wrap.cpp
	../../src/libbulletc/btMultimaterialTriangleMeshShape_wrap.cpp
	../../src/libbulletc/btMultiSphereShape_wrap.cpp
	../../src/libbulletc/btNNCGConstraintSolver_wrap.cpp
	../../src/libbulletc/btOptimizedBvh_wrap.cpp
	../../src/libbulletc/btOverlappingPairCache_wrap.cpp
	../../src/libbulletc/btOverlappingPairCallback_wrap.cpp
	../../src/libbulletc/btPersistentManifold_wrap.cpp
	../../src/libbulletc/btPoint2PointConstraint_wrap.cpp
	../../src/libbulletc/btPointCollector_wrap.cpp
	../../src/libbulletc/btPolarDecomposition_wrap.cpp
	../../src/libbulletc/btPolyhedralConvexShape_wrap.cpp
	../../src/libbulletc/btQuantizedBvh_wrap.cpp
	../../src/libbulletc/btRaycastVehicle_wrap.cpp
	../../src/libbulletc/btRigidBody_wrap.cpp
	../../src/libbulletc/btScaledBvhTriangleMeshShape_wrap.cpp
	../../src/libbulletc/btSequentialImpulseConstraintSolver_wrap.cpp
	../../src/libbulletc/btSerializer_wrap.cpp
	../../src/libbulletc/btShapeHull_wrap.cpp
	../../src/libbulletc/btSimulationIslandManager_wrap.cpp
	../../src/libbulletc/btSliderConstraint_wrap.cpp
	../../src/libbulletc/btSoftBodyConcaveCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btSoftBodyHelpers_wrap.cpp
	../../src/libbulletc/btSoftBodyRigidBodyCollisionConfiguration_wrap.cpp
	../../src/libbulletc/btSoftBodySolvers_wrap.cpp
	../../src/libbulletc/btSoftBody_wrap.cpp
	../../src/libbulletc/btSoftRigidCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btSoftRigidDynamicsWorld_wrap.cpp
	../../src/libbulletc/btSoftSoftCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btSparseSdf3_wrap.cpp
	../../src/libbulletc/btSphereBoxCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btSphereShape_wrap.cpp
	../../src/libbulletc/btSphereSphereCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btSphereTriangleCollisionAlgorithm_wrap.cpp
	../../src/libbulletc/btStaticPlaneShape_wrap.cpp
	../../src/libbulletc/btStridingMeshInterface_wrap.cpp
	../../src/libbulletc/btTetrahedronShape_wrap.cpp
	../../src/libbulletc/btTransformUtil_wrap.cpp
	../../src/libbulletc/btTriangleBuffer_wrap.cpp
	../../src/libbulletc/btTriangleCallback_wrap.cpp
	../../src/libbulletc/btTriangleIndexVertexArray_wrap.cpp
	../../src/libbulletc/btTriangleIndexVertexMaterialArray_wrap.cpp
	../../src/libbulletc/btTriangleInfoMap_wrap.cpp
	../../src/libbulletc/btTriangleMeshShape_wrap.cpp
	../../src/libbulletc/btTriangleMesh_wrap.cpp
	../../src/libbulletc/btTriangleShapeEx_wrap.cpp
	../../src/libbulletc/btTriangleShape_wrap.cpp
	../../src/libbulletc/btTypedConstraint_wrap.cpp
	../../src/libbulletc/btUniformScalingShape_wrap.cpp
	../../src/libbulletc/btUnionFind_wrap.cpp
	../../src/libbulletc/btUniversalConstraint_wrap.cpp
	../../src/libbulletc/btVehicleRaycaster_wrap.cpp
	../../src/libbulletc/btVoronoiSimplexSolver_wrap.cpp
	../../src/libbulletc/btWheelInfo_wrap.cpp
	../../src/libbulletc/btWorldImporter_wrap.cpp
	../../src/libbulletc/collections.cpp
	../../src/libbulletc/hacdHACD_wrap.cpp
	../../src/src/Bullet3Common/b3AlignedAllocator.cpp
	../../src/src/Bullet3Common/b3Logging.cpp
	../../src/src/Bullet3Common/b3Vector3.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btDbvt.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btDispatcher.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
	../../src/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
	../../src/src/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
	../../src/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btGhostObject.cpp
	../../src/src/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
	../../src/src/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
	../../src/src/BulletCollision/CollisionDispatch/btManifoldResult.cpp
	../../src/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
	../../src/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
	../../src/src/BulletCollision/CollisionDispatch/btUnionFind.cpp
	../../src/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
	../../src/src/BulletCollision/CollisionShapes/btBox2dShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btBoxShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btCollisionShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btCompoundShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConcaveShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConeShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvex2dShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexHullShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btCylinderShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btEmptyShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
	../../src/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btShapeHull.cpp
	../../src/src/BulletCollision/CollisionShapes/btSphereShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
	../../src/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleCallback.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleMesh.cpp
	../../src/src/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
	../../src/src/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
	../../src/src/BulletCollision/Gimpact/btContactProcessing.cpp
	../../src/src/BulletCollision/Gimpact/btGenericPoolAllocator.cpp
	../../src/src/BulletCollision/Gimpact/btGImpactBvh.cpp
	../../src/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
	../../src/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
	../../src/src/BulletCollision/Gimpact/btGImpactShape.cpp
	../../src/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp
	../../src/src/BulletCollision/Gimpact/gim_box_set.cpp
	../../src/src/BulletCollision/Gimpact/gim_contact.cpp
	../../src/src/BulletCollision/Gimpact/gim_memory.cpp
	../../src/src/BulletCollision/Gimpact/gim_tri_collision.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
	../../src/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
	../../src/src/BulletDynamics/Character/btKinematicCharacterController.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
	../../src/src/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
	../../src/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
	../../src/src/BulletDynamics/Dynamics/btRigidBody.cpp
	../../src/src/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBody.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
	../../src/src/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
	../../src/src/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
	../../src/src/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
	../../src/src/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
	../../src/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp
	../../src/src/BulletDynamics/Vehicle/btWheelInfo.cpp
	../../src/src/BulletInverseDynamics/details/MultiBodyTreeImpl.cpp
	../../src/src/BulletInverseDynamics/details/MultiBodyTreeInitCache.cpp
	../../src/src/BulletInverseDynamics/IDMath.cpp
	../../src/src/BulletInverseDynamics/MultiBodyTree.cpp
	../../src/src/BulletSoftBody/btDefaultSoftBodySolver.cpp
	../../src/src/BulletSoftBody/btSoftBody.cpp
	../../src/src/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
	../../src/src/BulletSoftBody/btSoftBodyHelpers.cpp
	../../src/src/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
	../../src/src/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
	../../src/src/BulletSoftBody/btSoftRigidDynamicsWorld.cpp
	../../src/src/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
	../../src/src/clew/clew.c
	../../src/src/LinearMath/btAlignedAllocator.cpp
	../../src/src/LinearMath/btConvexHull.cpp
	../../src/src/LinearMath/btConvexHullComputer.cpp
	../../src/src/LinearMath/btGeometryUtil.cpp
	../../src/src/LinearMath/btPolarDecomposition.cpp
	../../src/src/LinearMath/btQuickprof.cpp
	../../src/src/LinearMath/btSerializer.cpp
	../../src/src/LinearMath/btVector3.cpp
    )

## section: header files
# Add your header files here(one file per line), please SORT in alphabetical order for future maintenance!
SET(${this_target}_HEADER_FILES
    ../../src/Extras/ConvexDecomposition/bestfit.h
	../../src/Extras/ConvexDecomposition/bestfitobb.h
	../../src/Extras/ConvexDecomposition/cd_hull.h
	../../src/Extras/ConvexDecomposition/cd_vector.h
	../../src/Extras/ConvexDecomposition/cd_wavefront.h
	../../src/Extras/ConvexDecomposition/concavity.h
	../../src/Extras/ConvexDecomposition/ConvexBuilder.h
	../../src/Extras/ConvexDecomposition/ConvexDecomposition.h
	../../src/Extras/ConvexDecomposition/fitsphere.h
	../../src/Extras/ConvexDecomposition/float_math.h
	../../src/Extras/ConvexDecomposition/meshvolume.h
	../../src/Extras/ConvexDecomposition/planetri.h
	../../src/Extras/ConvexDecomposition/raytri.h
	../../src/Extras/ConvexDecomposition/splitplane.h
	../../src/Extras/ConvexDecomposition/vlookup.h
	../../src/Extras/HACD/hacdCircularList.h
	../../src/Extras/HACD/hacdGraph.h
	../../src/Extras/HACD/hacdHACD.h
	../../src/Extras/HACD/hacdICHull.h
	../../src/Extras/HACD/hacdManifoldMesh.h
	../../src/Extras/HACD/hacdVector.h
	../../src/Extras/HACD/hacdVersion.h
	../../src/Extras/Serialize/BulletFileLoader/bChunk.h
	../../src/Extras/Serialize/BulletFileLoader/bCommon.h
	../../src/Extras/Serialize/BulletFileLoader/bDefines.h
	../../src/Extras/Serialize/BulletFileLoader/bDNA.h
	../../src/Extras/Serialize/BulletFileLoader/bFile.h
	../../src/Extras/Serialize/BulletFileLoader/btBulletFile.h
	../../src/Extras/Serialize/BulletWorldImporter/btBulletWorldImporter.h
	../../src/Extras/Serialize/BulletWorldImporter/btWorldImporter.h
	../../src/Extras/Serialize/BulletXmlWorldImporter/btBulletXmlWorldImporter.h
	../../src/Extras/Serialize/BulletXmlWorldImporter/string_split.h
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinystr.h
	../../src/Extras/Serialize/BulletXmlWorldImporter/tinyxml.h
	../../src/libbulletc/btActionInterface_wrap.h
	../../src/libbulletc/btAlignedObjectArray_wrap.h
	../../src/libbulletc/btAxisSweep3_wrap.h
	../../src/libbulletc/btBox2dBox2dCollisionAlgorithm_wrap.h
	../../src/libbulletc/btBox2dShape_wrap.h
	../../src/libbulletc/btBoxBoxCollisionAlgorithm_wrap.h
	../../src/libbulletc/btBoxBoxDetector_wrap.h
	../../src/libbulletc/btBoxCollision_wrap.h
	../../src/libbulletc/btBoxShape_wrap.h
	../../src/libbulletc/btBroadphaseInterface_wrap.h
	../../src/libbulletc/btBroadphaseProxy_wrap.h
	../../src/libbulletc/btBulletFile_wrap.h
	../../src/libbulletc/btBulletWorldImporter_wrap.h
	../../src/libbulletc/btBulletXmlWorldImporter_wrap.h
	../../src/libbulletc/btBvhTriangleMeshShape_wrap.h
	../../src/libbulletc/btCapsuleShape_wrap.h
	../../src/libbulletc/btCharacterControllerInterface_wrap.h
	../../src/libbulletc/btCollisionAlgorithm_wrap.h
	../../src/libbulletc/btCollisionConfiguration_wrap.h
	../../src/libbulletc/btCollisionCreateFunc_wrap.h
	../../src/libbulletc/btCollisionDispatcher_wrap.h
	../../src/libbulletc/btCollisionObjectWrapper_wrap.h
	../../src/libbulletc/btCollisionObject_wrap.h
	../../src/libbulletc/btCollisionShape_wrap.h
	../../src/libbulletc/btCollisionWorld_wrap.h
	../../src/libbulletc/btCompoundCollisionAlgorithm_wrap.h
	../../src/libbulletc/btCompoundCompoundCollisionAlgorithm_wrap.h
	../../src/libbulletc/btCompoundFromGimpact_wrap.h
	../../src/libbulletc/btCompoundShape_wrap.h
	../../src/libbulletc/btConcaveShape_wrap.h
	../../src/libbulletc/btConeShape_wrap.h
	../../src/libbulletc/btConeTwistConstraint_wrap.h
	../../src/libbulletc/btConstraintSolver_wrap.h
	../../src/libbulletc/btContactConstraint_wrap.h
	../../src/libbulletc/btContactSolverInfo_wrap.h
	../../src/libbulletc/btContinuousConvexCollision_wrap.h
	../../src/libbulletc/btConvex2dConvex2dAlgorithm_wrap.h
	../../src/libbulletc/btConvex2dShape_wrap.h
	../../src/libbulletc/btConvexCast_wrap.h
	../../src/libbulletc/btConvexConcaveCollisionAlgorithm_wrap.h
	../../src/libbulletc/btConvexConvexAlgorithm_wrap.h
	../../src/libbulletc/btConvexHullShape_wrap.h
	../../src/libbulletc/btConvexInternalShape_wrap.h
	../../src/libbulletc/btConvexPenetrationDepthSolver_wrap.h
	../../src/libbulletc/btConvexPlaneCollisionAlgorithm_wrap.h
	../../src/libbulletc/btConvexPointCloudShape_wrap.h
	../../src/libbulletc/btConvexPolyhedron_wrap.h
	../../src/libbulletc/btConvexShape_wrap.h
	../../src/libbulletc/btConvexTriangleMeshShape_wrap.h
	../../src/libbulletc/btCylinderShape_wrap.h
	../../src/libbulletc/btDantzigSolver_wrap.h
	../../src/libbulletc/btDbvtBroadphase_wrap.h
	../../src/libbulletc/btDbvt_wrap.h
	../../src/libbulletc/btDefaultCollisionConfiguration_wrap.h
	../../src/libbulletc/btDefaultMotionState_wrap.h
	../../src/libbulletc/btDefaultSoftBodySolver_wrap.h
	../../src/libbulletc/btDiscreteCollisionDetectorInterface_wrap.h
	../../src/libbulletc/btDiscreteDynamicsWorld_wrap.h
	../../src/libbulletc/btDispatcher_wrap.h
	../../src/libbulletc/btDynamicsWorld_wrap.h
	../../src/libbulletc/btEmptyCollisionAlgorithm_wrap.h
	../../src/libbulletc/btEmptyShape_wrap.h
	../../src/libbulletc/btFixedConstraint_wrap.h
	../../src/libbulletc/btGearConstraint_wrap.h
	../../src/libbulletc/btGeneric6DofConstraint_wrap.h
	../../src/libbulletc/btGeneric6DofSpring2Constraint_wrap.h
	../../src/libbulletc/btGeneric6DofSpringConstraint_wrap.h
	../../src/libbulletc/btGeometryUtil_wrap.h
	../../src/libbulletc/btGhostObject_wrap.h
	../../src/libbulletc/btGImpactBvh_wrap.h
	../../src/libbulletc/btGImpactCollisionAlgorithm_wrap.h
	../../src/libbulletc/btGImpactQuantizedBvh_wrap.h
	../../src/libbulletc/btGImpactShape_wrap.h
	../../src/libbulletc/btGjkConvexCast_wrap.h
	../../src/libbulletc/btGjkEpaPenetrationDepthSolver_wrap.h
	../../src/libbulletc/btGjkPairDetector_wrap.h
	../../src/libbulletc/btHeightfieldTerrainShape_wrap.h
	../../src/libbulletc/btHinge2Constraint_wrap.h
	../../src/libbulletc/btHingeConstraint_wrap.h
	../../src/libbulletc/btIDebugDraw_wrap.h
	../../src/libbulletc/btKinematicCharacterController_wrap.h
	../../src/libbulletc/btLemkeSolver_wrap.h
	../../src/libbulletc/btManifoldPoint_wrap.h
	../../src/libbulletc/btManifoldResult_wrap.h
	../../src/libbulletc/btMinkowskiPenetrationDepthSolver_wrap.h
	../../src/libbulletc/btMinkowskiSumShape_wrap.h
	../../src/libbulletc/btMLCPSolverInterface_wrap.h
	../../src/libbulletc/btMLCPSolver_wrap.h
	../../src/libbulletc/btMotionState_wrap.h
	../../src/libbulletc/btMultiBodyConstraintSolver_wrap.h
	../../src/libbulletc/btMultiBodyConstraint_wrap.h
	../../src/libbulletc/btMultiBodyDynamicsWorld_wrap.h
	../../src/libbulletc/btMultiBodyJointLimitConstraint_wrap.h
	../../src/libbulletc/btMultiBodyJointMotor_wrap.h
	../../src/libbulletc/btMultiBodyLinkCollider_wrap.h
	../../src/libbulletc/btMultiBodyLink_wrap.h
	../../src/libbulletc/btMultiBodyPoint2Point_wrap.h
	../../src/libbulletc/btMultiBodySolverConstraint_wrap.h
	../../src/libbulletc/btMultiBody_wrap.h
	../../src/libbulletc/btMultimaterialTriangleMeshShape_wrap.h
	../../src/libbulletc/btMultiSphereShape_wrap.h
	../../src/libbulletc/btNNCGConstraintSolver_wrap.h
	../../src/libbulletc/btOptimizedBvh_wrap.h
	../../src/libbulletc/btOverlappingPairCache_wrap.h
	../../src/libbulletc/btOverlappingPairCallback_wrap.h
	../../src/libbulletc/btPersistentManifold_wrap.h
	../../src/libbulletc/btPoint2PointConstraint_wrap.h
	../../src/libbulletc/btPointCollector_wrap.h
	../../src/libbulletc/btPolarDecomposition_wrap.h
	../../src/libbulletc/btPolyhedralConvexShape_wrap.h
	../../src/libbulletc/btQuantizedBvh_wrap.h
	../../src/libbulletc/btRaycastVehicle_wrap.h
	../../src/libbulletc/btRigidBody_wrap.h
	../../src/libbulletc/btScaledBvhTriangleMeshShape_wrap.h
	../../src/libbulletc/btSequentialImpulseConstraintSolver_wrap.h
	../../src/libbulletc/btSerializer_wrap.h
	../../src/libbulletc/btShapeHull_wrap.h
	../../src/libbulletc/btSimulationIslandManager_wrap.h
	../../src/libbulletc/btSliderConstraint_wrap.h
	../../src/libbulletc/btSoftBodyConcaveCollisionAlgorithm_wrap.h
	../../src/libbulletc/btSoftBodyHelpers_wrap.h
	../../src/libbulletc/btSoftBodyRigidBodyCollisionConfiguration_wrap.h
	../../src/libbulletc/btSoftBodySolvers_wrap.h
	../../src/libbulletc/btSoftBody_wrap.h
	../../src/libbulletc/btSoftRigidCollisionAlgorithm_wrap.h
	../../src/libbulletc/btSoftRigidDynamicsWorld_wrap.h
	../../src/libbulletc/btSoftSoftCollisionAlgorithm_wrap.h
	../../src/libbulletc/btSparseSdf3_wrap.h
	../../src/libbulletc/btSphereBoxCollisionAlgorithm_wrap.h
	../../src/libbulletc/btSphereShape_wrap.h
	../../src/libbulletc/btSphereSphereCollisionAlgorithm_wrap.h
	../../src/libbulletc/btSphereTriangleCollisionAlgorithm_wrap.h
	../../src/libbulletc/btStaticPlaneShape_wrap.h
	../../src/libbulletc/btStridingMeshInterface_wrap.h
	../../src/libbulletc/btTetrahedronShape_wrap.h
	../../src/libbulletc/btTransformUtil_wrap.h
	../../src/libbulletc/btTriangleBuffer_wrap.h
	../../src/libbulletc/btTriangleCallback_wrap.h
	../../src/libbulletc/btTriangleIndexVertexArray_wrap.h
	../../src/libbulletc/btTriangleIndexVertexMaterialArray_wrap.h
	../../src/libbulletc/btTriangleInfoMap_wrap.h
	../../src/libbulletc/btTriangleMeshShape_wrap.h
	../../src/libbulletc/btTriangleMesh_wrap.h
	../../src/libbulletc/btTriangleShapeEx_wrap.h
	../../src/libbulletc/btTriangleShape_wrap.h
	../../src/libbulletc/btTypedConstraint_wrap.h
	../../src/libbulletc/btUniformScalingShape_wrap.h
	../../src/libbulletc/btUnionFind_wrap.h
	../../src/libbulletc/btUniversalConstraint_wrap.h
	../../src/libbulletc/btVehicleRaycaster_wrap.h
	../../src/libbulletc/btVoronoiSimplexSolver_wrap.h
	../../src/libbulletc/btWheelInfo_wrap.h
	../../src/libbulletc/btWorldImporter_wrap.h
	../../src/libbulletc/bulletc.h
	../../src/libbulletc/collections.h
	../../src/libbulletc/conversion.h
	../../src/libbulletc/hacdHACD_wrap.h
	../../src/libbulletc/main.h
	../../src/src/btBulletCollisionCommon.h
	../../src/src/btBulletDynamicsCommon.h
	../../src/src/Bullet3Common/b3AlignedAllocator.h
	../../src/src/Bullet3Common/b3AlignedObjectArray.h
	../../src/src/Bullet3Common/b3CommandLineArgs.h
	../../src/src/Bullet3Common/b3FileUtils.h
	../../src/src/Bullet3Common/b3HashMap.h
	../../src/src/Bullet3Common/b3Logging.h
	../../src/src/Bullet3Common/b3Matrix3x3.h
	../../src/src/Bullet3Common/b3MinMax.h
	../../src/src/Bullet3Common/b3PoolAllocator.h
	../../src/src/Bullet3Common/b3QuadWord.h
	../../src/src/Bullet3Common/b3Quaternion.h
	../../src/src/Bullet3Common/b3Random.h
	../../src/src/Bullet3Common/b3Scalar.h
	../../src/src/Bullet3Common/b3StackAlloc.h
	../../src/src/Bullet3Common/b3Transform.h
	../../src/src/Bullet3Common/b3TransformUtil.h
	../../src/src/Bullet3Common/b3Vector3.h
	../../src/src/Bullet3Common/shared/b3Float4.h
	../../src/src/Bullet3Common/shared/b3Int2.h
	../../src/src/Bullet3Common/shared/b3Int4.h
	../../src/src/Bullet3Common/shared/b3Mat3x3.h
	../../src/src/Bullet3Common/shared/b3PlatformDefinitions.h
	../../src/src/Bullet3Common/shared/b3Quat.h
	../../src/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h
	../../src/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h
	../../src/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h
	../../src/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h
	../../src/src/BulletCollision/BroadphaseCollision/btDbvt.h
	../../src/src/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h
	../../src/src/BulletCollision/BroadphaseCollision/btDispatcher.h
	../../src/src/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.h
	../../src/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h
	../../src/src/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h
	../../src/src/BulletCollision/BroadphaseCollision/btQuantizedBvh.h
	../../src/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h
	../../src/src/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btBoxBoxDetector.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionConfiguration.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionObject.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionObjectWrapper.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionWorld.h
	../../src/src/BulletCollision/CollisionDispatch/btCollisionWorldImporter.h
	../../src/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h
	../../src/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btGhostObject.h
	../../src/src/BulletCollision/CollisionDispatch/btHashedSimplePairCache.h
	../../src/src/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h
	../../src/src/BulletCollision/CollisionDispatch/btManifoldResult.h
	../../src/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.h
	../../src/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h
	../../src/src/BulletCollision/CollisionDispatch/btUnionFind.h
	../../src/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.h
	../../src/src/BulletCollision/CollisionShapes/btBox2dShape.h
	../../src/src/BulletCollision/CollisionShapes/btBoxShape.h
	../../src/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h
	../../src/src/BulletCollision/CollisionShapes/btCapsuleShape.h
	../../src/src/BulletCollision/CollisionShapes/btCollisionMargin.h
	../../src/src/BulletCollision/CollisionShapes/btCollisionShape.h
	../../src/src/BulletCollision/CollisionShapes/btCompoundShape.h
	../../src/src/BulletCollision/CollisionShapes/btConcaveShape.h
	../../src/src/BulletCollision/CollisionShapes/btConeShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvex2dShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvexHullShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvexInternalShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvexPointCloudShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvexPolyhedron.h
	../../src/src/BulletCollision/CollisionShapes/btConvexShape.h
	../../src/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h
	../../src/src/BulletCollision/CollisionShapes/btCylinderShape.h
	../../src/src/BulletCollision/CollisionShapes/btEmptyShape.h
	../../src/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h
	../../src/src/BulletCollision/CollisionShapes/btMaterial.h
	../../src/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.h
	../../src/src/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h
	../../src/src/BulletCollision/CollisionShapes/btMultiSphereShape.h
	../../src/src/BulletCollision/CollisionShapes/btOptimizedBvh.h
	../../src/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h
	../../src/src/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h
	../../src/src/BulletCollision/CollisionShapes/btShapeHull.h
	../../src/src/BulletCollision/CollisionShapes/btSphereShape.h
	../../src/src/BulletCollision/CollisionShapes/btStaticPlaneShape.h
	../../src/src/BulletCollision/CollisionShapes/btStridingMeshInterface.h
	../../src/src/BulletCollision/CollisionShapes/btTetrahedronShape.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleBuffer.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleCallback.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleInfoMap.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleMesh.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleMeshShape.h
	../../src/src/BulletCollision/CollisionShapes/btTriangleShape.h
	../../src/src/BulletCollision/CollisionShapes/btUniformScalingShape.h
	../../src/src/BulletCollision/Gimpact/btBoxCollision.h
	../../src/src/BulletCollision/Gimpact/btClipPolygon.h
	../../src/src/BulletCollision/Gimpact/btCompoundFromGimpact.h
	../../src/src/BulletCollision/Gimpact/btContactProcessing.h
	../../src/src/BulletCollision/Gimpact/btGenericPoolAllocator.h
	../../src/src/BulletCollision/Gimpact/btGeometryOperations.h
	../../src/src/BulletCollision/Gimpact/btGImpactBvh.h
	../../src/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h
	../../src/src/BulletCollision/Gimpact/btGImpactMassUtil.h
	../../src/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h
	../../src/src/BulletCollision/Gimpact/btGImpactShape.h
	../../src/src/BulletCollision/Gimpact/btQuantization.h
	../../src/src/BulletCollision/Gimpact/btTriangleShapeEx.h
	../../src/src/BulletCollision/Gimpact/gim_array.h
	../../src/src/BulletCollision/Gimpact/gim_basic_geometry_operations.h
	../../src/src/BulletCollision/Gimpact/gim_bitset.h
	../../src/src/BulletCollision/Gimpact/gim_box_collision.h
	../../src/src/BulletCollision/Gimpact/gim_box_set.h
	../../src/src/BulletCollision/Gimpact/gim_clip_polygon.h
	../../src/src/BulletCollision/Gimpact/gim_contact.h
	../../src/src/BulletCollision/Gimpact/gim_geometry.h
	../../src/src/BulletCollision/Gimpact/gim_geom_types.h
	../../src/src/BulletCollision/Gimpact/gim_hash_table.h
	../../src/src/BulletCollision/Gimpact/gim_linear_math.h
	../../src/src/BulletCollision/Gimpact/gim_math.h
	../../src/src/BulletCollision/Gimpact/gim_memory.h
	../../src/src/BulletCollision/Gimpact/gim_radixsort.h
	../../src/src/BulletCollision/Gimpact/gim_tri_collision.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btComputeGjkEpaPenetration.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btConvexCast.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkCollisionDescription.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkEpa3.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btMprPenetration.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btPointCollector.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h
	../../src/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h
	../../src/src/BulletDynamics/Character/btCharacterControllerInterface.h
	../../src/src/BulletDynamics/Character/btKinematicCharacterController.h
	../../src/src/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btConstraintSolver.h
	../../src/src/BulletDynamics/ConstraintSolver/btContactConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btContactSolverInfo.h
	../../src/src/BulletDynamics/ConstraintSolver/btFixedConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btGearConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btHinge2Constraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btHingeConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btJacobianEntry.h
	../../src/src/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.h
	../../src/src/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h
	../../src/src/BulletDynamics/ConstraintSolver/btSliderConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btSolverBody.h
	../../src/src/BulletDynamics/ConstraintSolver/btSolverConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btTypedConstraint.h
	../../src/src/BulletDynamics/ConstraintSolver/btUniversalConstraint.h
	../../src/src/BulletDynamics/Dynamics/btActionInterface.h
	../../src/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h
	../../src/src/BulletDynamics/Dynamics/btDynamicsWorld.h
	../../src/src/BulletDynamics/Dynamics/btRigidBody.h
	../../src/src/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h
	../../src/src/BulletDynamics/Featherstone/btMultiBody.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyConstraint.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyJointFeedback.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyJointMotor.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyLink.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyLinkCollider.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodyPoint2Point.h
	../../src/src/BulletDynamics/Featherstone/btMultiBodySolverConstraint.h
	../../src/src/BulletDynamics/MLCPSolvers/btDantzigLCP.h
	../../src/src/BulletDynamics/MLCPSolvers/btDantzigSolver.h
	../../src/src/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.h
	../../src/src/BulletDynamics/MLCPSolvers/btLemkeSolver.h
	../../src/src/BulletDynamics/MLCPSolvers/btMLCPSolver.h
	../../src/src/BulletDynamics/MLCPSolvers/btMLCPSolverInterface.h
	../../src/src/BulletDynamics/MLCPSolvers/btPATHSolver.h
	../../src/src/BulletDynamics/MLCPSolvers/btSolveProjectedGaussSeidel.h
	../../src/src/BulletDynamics/Vehicle/btRaycastVehicle.h
	../../src/src/BulletDynamics/Vehicle/btVehicleRaycaster.h
	../../src/src/BulletDynamics/Vehicle/btWheelInfo.h
	../../src/src/BulletInverseDynamics/details/IDEigenInterface.hpp
	../../src/src/BulletInverseDynamics/details/IDLinearMathInterface.hpp
	../../src/src/BulletInverseDynamics/details/IDMatVec.hpp
	../../src/src/BulletInverseDynamics/details/MultiBodyTreeImpl.hpp
	../../src/src/BulletInverseDynamics/details/MultiBodyTreeInitCache.hpp
	../../src/src/BulletInverseDynamics/IDConfig.hpp
	../../src/src/BulletInverseDynamics/IDConfigBuiltin.hpp
	../../src/src/BulletInverseDynamics/IDConfigEigen.hpp
	../../src/src/BulletInverseDynamics/IDErrorMessages.hpp
	../../src/src/BulletInverseDynamics/IDMath.hpp
	../../src/src/BulletInverseDynamics/MultiBodyTree.hpp
	../../src/src/BulletSoftBody/btDefaultSoftBodySolver.h
	../../src/src/BulletSoftBody/btSoftBody.h
	../../src/src/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.h
	../../src/src/BulletSoftBody/btSoftBodyData.h
	../../src/src/BulletSoftBody/btSoftBodyHelpers.h
	../../src/src/BulletSoftBody/btSoftBodyInternals.h
	../../src/src/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.h
	../../src/src/BulletSoftBody/btSoftBodySolvers.h
	../../src/src/BulletSoftBody/btSoftBodySolverVertexBuffer.h
	../../src/src/BulletSoftBody/btSoftRigidCollisionAlgorithm.h
	../../src/src/BulletSoftBody/btSoftRigidDynamicsWorld.h
	../../src/src/BulletSoftBody/btSoftSoftCollisionAlgorithm.h
	../../src/src/BulletSoftBody/btSparseSDF.h
	../../src/src/clew/clew.h
	../../src/src/LinearMath/btAabbUtil2.h
	../../src/src/LinearMath/btAlignedAllocator.h
	../../src/src/LinearMath/btAlignedObjectArray.h
	../../src/src/LinearMath/btConvexHull.h
	../../src/src/LinearMath/btConvexHullComputer.h
	../../src/src/LinearMath/btDefaultMotionState.h
	../../src/src/LinearMath/btGeometryUtil.h
	../../src/src/LinearMath/btGrahamScan2dConvexHull.h
	../../src/src/LinearMath/btHashMap.h
	../../src/src/LinearMath/btIDebugDraw.h
	../../src/src/LinearMath/btList.h
	../../src/src/LinearMath/btMatrix3x3.h
	../../src/src/LinearMath/btMatrixX.h
	../../src/src/LinearMath/btMinMax.h
	../../src/src/LinearMath/btMotionState.h
	../../src/src/LinearMath/btPolarDecomposition.h
	../../src/src/LinearMath/btPoolAllocator.h
	../../src/src/LinearMath/btQuadWord.h
	../../src/src/LinearMath/btQuaternion.h
	../../src/src/LinearMath/btQuickprof.h
	../../src/src/LinearMath/btRandom.h
	../../src/src/LinearMath/btScalar.h
	../../src/src/LinearMath/btSerializer.h
	../../src/src/LinearMath/btSpatialAlgebra.h
	../../src/src/LinearMath/btStackAlloc.h
	../../src/src/LinearMath/btTransform.h
	../../src/src/LinearMath/btTransformUtil.h
	../../src/src/LinearMath/btVector3.h
    )

SET_SOURCE_FILES_PROPERTIES(${this_target}_HEADER_FILES
                            PROPERTIES HEADER_FILE_ONLY TRUE)
LIST(APPEND ${this_target}_SOURCE_FILES ${${this_target}_HEADER_FILES})

ADD_DEFINITIONS(
    -D_CRT_SECURE_NO_WARNINGS
	-DNDEBUG
	-D_USRDLL
	-DLIBBULLETC_EXPORTS
    )

if (32BIT)
	SET(COMPILE_FLAGS "-m32 -flto -O3 -fstack-protector-strong")
else(32BIT)
	SET(COMPILE_FLAGS "-m64 -flto -O3 -fstack-protector-strong")
endif(32BIT)


# We need to make the binary as fast as possible.
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}" )
SET( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_FLAGS} ${COMPILE_FLAGS}" )

## section: add target

ADD_LIBRARY(${this_target} SHARED ${${this_target}_SOURCE_FILES} )


